# Net-Guardian-AI

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  start-netguardian.bat
backend/: =0.40.0  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260116_0001_001_initial_schema.py  20260119_0002_002_add_baselines_anomalies.py  20260119_0003_003_add_audit_logs.py  20260119_0004_004_add_playbooks.py  20260119_0005_005_add_notification_preferences.py  20260119_0006_006_add_2fa_fields.py  20260119_0007_007_add_retention_policies.py  20260120_0008_008_add_threat_intel.py  20260122_0009_009_add_semantic_analysis.py  20260123_1654_4ac0c165a6e9_add_loki_parser_type.py  20260127_0010_010_add_authentik_support.py  20260128_0011_011_increase_target_ip_size.py  20260128_0012_012_add_udp_listen_source_type.py  20260129_0013_013_add_missing_parser_types.py
backend/app/: __init__.py  config.py  main.py  worker.py
backend/app/api/: __init__.py
backend/app/collectors/: __init__.py  api_pull_collector.py  base.py  error_handler.py  file_collector.py  registry.py  udp_listener_collector.py  worker.py
backend/app/core/: __init__.py  cache.py  exceptions.py  http_client.py  logging.py  middleware.py  rate_limit.py  rate_limiter.py  security.py  validation.py
backend/app/db/: __init__.py  session.py
backend/app/events/: __init__.py  bus.py
backend/app/models/: __init__.py  alert.py  anomaly.py  audit_log.py  base.py  detection_rule.py  device.py  device_baseline.py  log_source.py  notification_preferences.py  playbook.py  raw_event.py  retention_policy.py  semantic_analysis.py  threat_intel.py  user.py
backend/app/parsers/: __init__.py  adguard_parser.py  authentik_parser.py  base.py  custom_parser.py  endpoint_parser.py  json_parser.py  loki_parser.py  netflow_parser.py  nginx_parser.py  ollama_parser.py  registry.py  sflow_parser.py  syslog_parser.py
backend/app/services/: __init__.py  anomaly_service.py  (+22 more)
backend/scripts/: __init__.py  seed_demo_data.py
backend/tests/: conftest.py  factories.py  test_phase4_audit.py  test_phase4_integrations.py  test_phase4_playbooks.py
(+155 files in other folders)
