[project]
name = "netguardian-backend"
version = "0.1.0"
description = "AI-Powered Home Network Security Monitoring System"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Anthony", email = "anthony@example.com"}
]

dependencies = [
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",

    # Database
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",

    # Redis
    "redis>=5.0.1",

    # Authentication
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.1.2",

    # Validation & Settings
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "email-validator>=2.1.0",

    # HTTP Client
    "httpx>=0.26.0",

    # File watching
    "watchdog>=3.0.0",

    # Logging
    "structlog>=24.1.0",

    # Utilities
    "python-dateutil>=2.8.2",
    "jsonpath-ng>=1.6.1",

    # OUI Lookup (MAC manufacturer)
    "mac-vendor-lookup>=0.1.12",

    # LLM Integration
    "anthropic>=0.40.0",

    # Email
    "aiosmtplib>=3.0.0",

    # Two-Factor Authentication
    "pyotp>=2.9.0",
    "qrcode>=7.4",
    "pillow>=10.0",

    # Export/Reports
    "reportlab>=4.0",

    # Metrics
    "prometheus-client>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "factory-boy>=3.3.0",
    "ruff>=0.1.13",
    "mypy>=1.8.0",
]

[project.scripts]
netguardian-worker = "app.worker:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Tests often have unused variables (result assertions) and Mock naming conventions
"tests/**/*.py" = ["F841", "N806"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
